--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
 include requirements*.txt
 include LICENSE
-recursive-include docs *.rst *.py Makefile make.bat
+recursive-include docs *.rst *.md *.py Makefile make.bat
