--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ python:
 install:
   - pip install -r requirements.txt
   - pip install -r requirements_dev.txt
+  - pip install .
 # command to run tests
 script: trial cooperative.tests
